@@ -61,7 +61,7 @@ void UserInterface::drawFileSelector(bool update)
 
 	// quick-search mini window
 	if (strlen(fileSelector->search)) {
-		int hx = (12 * fontWidth), hy = 6 + ((fileSelector->type == GUI_FS_SNAPSAVE) ? fontLineHeight + 2 : 0);
+		int hx = (21 * fontWidth), hy = 6 + ((fileSelector->type == GUI_FS_SNAPSAVE) ? fontLineHeight + 2 : 0);
 		drawRectangle(defaultSurface, mx - hx - 2, my - hy, hx + 8, fontHeight + 6, GUI_COLOR_BACKGROUND);
 		drawOutlineRounded(defaultSurface, mx - hx - 2, my - hy, hx + 8, fontHeight + 6, GUI_COLOR_DISABLED);
 		printText(defaultSurface, mx - hx + 2, my - hy + 3, GUI_COLOR_SMARTKEY, fileSelector->search);
@@ -196,14 +196,15 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 
 		case SDLK_ESCAPE:
 			if (searchlen > 0) {
-				keyhandlerFileSelectorSearchClean();
+				change = keyhandlerFileSelectorSearchClean();
 				needRelease = true;
-				change = true;
-				break;
 			}
-			menuClose();
-			needRelease = true;
-			return;
+			else {
+				menuClose();
+				needRelease = true;
+				return;
+			}
+			break;
 
 		case SDLK_c | KM_ALT:
 			if (fileSelector->type == GUI_FS_SNAPSAVE) {
@@ -294,32 +295,29 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 
 		case SDLK_SPACE:
 			if (searchlen > 0) {
-				searchlen = keyhandlerFileSelectorSearchFile(i);
-				if (searchlen == -1)
-					searchlen = keyhandlerFileSelectorSearchFile();
-				if (searchlen != -1) {
-					i = searchlen;
-					change = true;
-				}
+				i = keyhandlerFileSelectorSearch(i);
+				if (i < 0)
+					i = keyhandlerFileSelectorSearch();
+				if (i < 1)
+					i = cMenu_hilite;
 				drawFileSelector();
+				change = true;
 			}
 			break;
 
 		case SDLK_BACKSPACE:
 			if (searchlen > 1) {
 				fileSelector->search[searchlen - 1] = '\0';
-				searchlen = keyhandlerFileSelectorSearchFile();
-				if (searchlen != -1) {
-					i = searchlen;
-					change = true;
-				}
+				i = keyhandlerFileSelectorSearch();
+				if (i < 1)
+					i = cMenu_hilite;
 				drawFileSelector();
+				change = true;
 				break;
 			}
 			else if (searchlen == 1) {
-				keyhandlerFileSelectorSearchClean();
+				change = keyhandlerFileSelectorSearchClean();
 				needRelease = true;
-				change = true;
 				break;
 			}
 			else
@@ -328,7 +326,7 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 
 		case SDLK_RETURN:
 		case SDLK_KP_ENTER:
-			keyhandlerFileSelectorSearchClean();
+			change = keyhandlerFileSelectorSearchClean();
 			if (*ptr == '\xA0') {
 				lastItem = ptr + 1;
 				if ((ptr = strrchr(lastItem, '.'))) {
@@ -361,7 +359,7 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 
 		case SDLK_LEFT:
 		case SDLK_PAGEUP:
-			keyhandlerFileSelectorSearchClean();
+			change = keyhandlerFileSelectorSearchClean();
 			if (i > 0) {
 				i -= (key == SDLK_LEFT) ? halfpage : fileSelector->itemsOnPage;
 				if (i < 0)
@@ -372,7 +370,7 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 
 		case SDLK_RIGHT:
 		case SDLK_PAGEDOWN:
-			keyhandlerFileSelectorSearchClean();
+			change = keyhandlerFileSelectorSearchClean();
 			if (i < (cMenu_count - 1)) {
 				i += (key == SDLK_RIGHT) ? halfpage : fileSelector->itemsOnPage;
 				if (i >= cMenu_count)
@@ -382,7 +380,7 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 			break;
 
 		case SDLK_UP:
-			keyhandlerFileSelectorSearchClean();
+			change = keyhandlerFileSelectorSearchClean();
 			if (i > 0) {
 				i--;
 				change = true;
@@ -390,7 +388,7 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 			break;
 
 		case SDLK_DOWN:
-			keyhandlerFileSelectorSearchClean();
+			change = keyhandlerFileSelectorSearchClean();
 			if (i < (cMenu_count - 1)) {
 				i++;
 				change = true;
@@ -412,19 +410,63 @@ void UserInterface::keyhandlerFileSelector(WORD key)
 			break;
 
 		default:
-			if ((((key & ~KM_SHIFT) >= SDLK_a && (key & ~KM_SHIFT) <= SDLK_z) ||
-					(key >= SDLK_0 && key <= SDLK_9)) && searchlen < 12) {
+			b = (key & 127);
+			if (searchlen < 21 &&
+				((b > SDLK_SPACE && b <= SDLK_z) ||
+				 (key >= SDLK_KP0 && key <= SDLK_KP_PLUS))) {
 
-				fileSelector->search[searchlen] = (key & (KM_SHIFT - 1));
-				if ((key & KM_SHIFT) && !(key >= SDLK_0 && key <= SDLK_9))
-					fileSelector->search[searchlen] ^= 32;
-
-				fileSelector->search[++searchlen] = '\0';
-				searchlen = keyhandlerFileSelectorSearchFile();
-				if (searchlen != -1) {
-					i = searchlen;
-					change = true;
+				if (key & KM_SHIFT) {
+					if (b >= 'a' && b <= 'z')
+						b ^= 32;
+					else switch (b) {
+					// filtered only multiplatform restricted
+					// characters to avoid portability problems...
+						case '[': b = '{'; break;
+						case ']': b = '}'; break;
+						case '-': b = '_'; break;
+						case '=': b = '+'; break;
+						case '`': b = '~'; break;
+						case '1': b = '!'; break;
+						case '2': b = '@'; break;
+						case '3': b = '#'; break;
+						case '4': b = '$'; break;
+						case '5': b = '%'; break;
+						case '6': b = '^'; break;
+						case '7': b = '&'; break;
+						case '9': b = '('; break;
+						case '0': b = ')'; break;
+						default:  b = 0; break;
+					}
 				}
+				else if (key >= SDLK_KP0 && key <= SDLK_KP9)
+					b ^= 48;
+				else if (key == SDLK_KP_PERIOD)
+					b = '.';
+				else if (key == SDLK_KP_PLUS)
+					b = '+';
+				else if (key == SDLK_KP_MINUS)
+					b = '-';
+				else if (!((b >= 'a' && b <= 'z') || (b >= '0' && b <= '9'))) {
+					switch (b) {
+					// filtered only multiplatform restricted
+					// characters to avoid portability problems...
+						case '`': case '-': case '=': case '[': case ']':
+						case ';': case ',': case '.': case '\'':
+							break;
+						default:
+							b = 0;
+							break;
+					}
+				}
+
+				fileSelector->search[searchlen++] = b;
+				fileSelector->search[searchlen] = '\0';
+				i = keyhandlerFileSelectorSearch();
+				if (i < 1) {
+					fileSelector->search[--searchlen] = '\0';
+					i = cMenu_hilite;
+				}
+				change = true;
 				drawFileSelector();
 			}
 			break;
@@ -481,26 +523,27 @@ void UserInterface::keyhandlerFileSelectorCallback(char *fileName)
 		*ptr = '\0';
 }
 //-----------------------------------------------------------------------------
-int UserInterface::keyhandlerFileSelectorSearchFile(int from)
+int UserInterface::keyhandlerFileSelectorSearch(int from)
 {
 	char *ptr;
 
-	for (unsigned l = strlen(fileSelector->search); l > 0; l--) {
-		for (int i = from + 1; i < fileSelector->count; i++) {
-			ptr = fileSelector->dirEntries[i];
-			if (strncmp(ptr + 1, fileSelector->search, l) == 0)
-				return i;
-		}
+	for (int i = from + 1; i < fileSelector->count; i++) {
+		ptr = fileSelector->dirEntries[i];
+		if (strncmp(ptr + 1, fileSelector->search, strlen(fileSelector->search)) == 0)
+			return i;
 	}
 
 	return -1;
 }
 //-----------------------------------------------------------------------------
-void UserInterface::keyhandlerFileSelectorSearchClean()
+bool UserInterface::keyhandlerFileSelectorSearchClean()
 {
 	if (fileSelector->search[0] != '\0') {
 		fileSelector->search[0] = '\0';
 		drawFileSelector();
+		return true;
 	}
+
+	return false;
 }
 //-----------------------------------------------------------------------------
